public/css/videoChatPlayer.css
/* ... */
@-webkit-keyframes t2-swipe-1 {
  0% {
    transform: rotate(45deg) translate(-20px);
  }

  16.66667%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@keyframes t2-swipe-1 {
  0% {
    transform: rotate(45deg) translate(-20px);
  }

  16.66667%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@-webkit-keyframes t2-swipe-2 {

  0%,
  5.55556% {
    transform: rotate(45deg) translate(-20px);
  }

  22.22222%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@keyframes t2-swipe-2 {

  0%,
  5.55556% {
    transform: rotate(45deg) translate(-20px);
  }

  22.22222%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

/* Tier 2 Sub Animation */


/* Tier 3 Sub Animation */

.animated-tier-star__star {
  fill: #adadb8;
  transform-origin: center;
}

.animated-tier-star__swipe-mask {
  transform-origin: center;
}

.animated-tier-star--tier-3 .animated-tier-star__star {
  -webkit-animation: star-t3 3s ease-in-out 0s infinite;
  animation: star-t3 3s ease-in-out 0s infinite;
}

.animated-tier-star--tier-3 .animated-tier-star__swipe-mask {
  transform: rotate(72deg) scale(1.25);
}

.animated-tier-star--tier-3 .animated-tier-star__swipe-group {
  transform: rotate(-72deg);
  transform-origin: center;
}

.animated-tier-star--tier-3 .animated-tier-star__swipe--1 {
  -webkit-animation: t3-swipe-1 3s linear 0s infinite;
  animation: t3-swipe-1 3s linear 0s infinite;
}

.animated-tier-star--tier-3 .animated-tier-star__swipe--2 {
  -webkit-animation: t3-swipe-2 3s linear 0s infinite;
  animation: t3-swipe-2 3s linear 0s infinite;
}

.animated-tier-star--tier-3 .animated-tier-star__swipe--3 {
  -webkit-animation: t3-swipe-3 3s linear 0s infinite;
  animation: t3-swipe-3 3s linear 0s infinite;
}

.animated-tier-star__swipe {
  height: 100%;
  transform: translate(-100%);
  transform-origin: center;
  width: 20px;
}

@-webkit-keyframes t3-swipe-1 {

  0%,
  8.33333% {
    transform: rotate(45deg) translate(-20px);
  }

  25%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@keyframes t3-swipe-1 {

  0%,
  8.33333% {
    transform: rotate(45deg) translate(-20px);
  }

  25%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@-webkit-keyframes t3-swipe-2 {

  0%,
  13.88889% {
    transform: rotate(45deg) translate(-20px);
  }

  30.55556%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@keyframes t3-swipe-2 {

  0%,
  13.88889% {
    transform: rotate(45deg) translate(-20px);
  }

  30.55556%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@-webkit-keyframes t3-swipe-3 {

  0%,
  19.44444% {
    transform: rotate(45deg) translate(-20px);
  }

  36.11111%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@keyframes t3-swipe-3 {

  0%,
  19.44444% {
    transform: rotate(45deg) translate(-20px);
  }

  36.11111%,
  to {
    transform: rotate(45deg) translate(20px);
  }
}

@-webkit-keyframes star-t3 {
  0% {
    transform: rotate(0deg) scale(1);
  }

  50%,
  8.33333% {
    transform: rotate(72deg) scale(1.25);
  }

  58.33333%,
  to {
    transform: rotate(72deg) scale(1);
  }
}

@keyframes star-t3 {
  0% {
    transform: rotate(0deg) scale(1);
  }

  50%,
  8.33333% {
    transform: rotate(72deg) scale(1.25);
  }

  58.33333%,
  to {
    transform: rotate(72deg) scale(1);
  }
}

/* Tier 3 Sub Animation */


/* width */
#chat::-webkit-scrollbar {
  width: 8px;
}

/* Track */
#chat::-webkit-scrollbar-track {
  background: #18181b; 
}
 
/* Handle */
#chat::-webkit-scrollbar-thumb {
  background: #727274;
}

/* Handle on hover */
#chat::-webkit-scrollbar-thumb:hover {
  background: #5f5f61; 
}

.chat-image-scale-undefined{
	padding-left: 4px;
}
.cover-bar {
	position: absolute;
	bottom: 0;
	right: 0;
    width: 8px;
	height: calc(100% - 91px);
	background-color:#18181b;
	z-index: 999;
	opacity: 100%;
	visibility: visible;
	animation-fill-mode: forwards;
	animation: CoverFadeIn linear 0.1s;
}
.scroll-bar-wrap:hover .cover-bar {	
	animation-fill-mode: forwards;
	animation: CoverFadeOut linear 0.1s;
	visibility: hidden;
	
}

@keyframes CoverFadeIn {
    0% {
        opacity: 0.4;
    }
    100% {
        opacity: 1;
     }
}
@keyframes CoverFadeOut { 
    0% { 
        opacity: 100%;
		visibility: visible;
    }
    99% {
        opacity: 1%;
     }
	100% {
		visibility: hidden;
	 }
}


input {
    width: 275px;
	background-color:#2b2b2f;
	font-size: 12px;
	font-weight: 400;
}


.info {
	font-family: "Inter";
}

.error {
    background-color: red;
    color: white;
}

.flex {
    display: flex;
}

.center {
    text-align: center;
}

.chatline {
    display: flex;
    white-space: nowrap;
	margin-bottom: 5px;
	padding-top: 5px;
}

.chattime {
    margin: 0 10px 0 10px;
    vertical-align: top;

    font-size: 12px;
    font-weight: 400;
	border-radius: 2px;
}

.chattime:hover {
    margin: 0 7px 0 7px;
    background-color: #464649;
	padding: 0 3px 0 3px;
	cursor: pointer;
}

.chatbody {
	width: 100%;
    white-space: normal;
	word-break: break-word;
}

.commenter {
    vertical-align: top;
    font-weight: bolder;
}

.messagePrefix {
    vertical-align: top;
    margin-right: 3px;
}

.chatmessage {
    vertical-align: top;
}
.chatmessage span {
    display: inline;
    vertical-align: top;
}

.chat-image-scale-1 {
	margin: 0 2px 0 2px;
}

.chat-image-scale-2 {
	margin: 0 2px 0 2px;
}

.chat-image-scale-3 {
	margin: 0 2px 0 2px;
}

.video-time {
	display: inline-block;
    margin: auto 0px;
    padding: 2px 2px;
	text-align: center;
	
}
#timeSeperator {
}


/* Play Button */

.video-controls-container .controls button {
  background: none;
  border: none;
  color: inherit;
  padding: 0;
  height: 30px;
  width: 30px;
  font-size: 1.1rem;
  cursor: pointer;
  opacity: .85;
  transition: opacity 150ms ease-in-out;
}

.video-controls-container .controls button:hover {
  opacity: 1;
}

.video-container.paused .pause-icon {
  display: none;
}

.video-container:not(.paused) .play-icon {
  display: none;
}

